--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,15 @@ services:
       MYSQL_DATABASE: flowers
       MYSQL_USER: flowers
       MYSQL_PASSWORD: flowers
+      MYSQL_SERVER: db
+
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+      - '8081:80'
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root
